--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,8 +3,22 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 20px;
   min-height: 100vh;
+}
+
+.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 10px 0;
+}
+
+.showimg {
+  max-width: 400px;
+  width: 100%;
+  height: auto;
 }
 
 .description {
@@ -78,7 +92,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 4rem 0;
+  padding: 10px 0;
 }
 
 .center::before {
