--- a/src/app/mdeditor/page.module.css
+++ b/src/app/mdeditor/page.module.css
@@ -17,22 +17,23 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    padding: 10px 10px 10px 20px;
+    padding: 10px 10px 10px 10px;
     background-color: #fff;
 }
 
 .copy {
     position: fixed;
-    top: 10px;
-    right: 10px;
-    width: 50px;
+    bottom: 30px;
+    right: 20px;
+    width: 55px;
     height: 25px;
     border-radius: 6px;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 25px;
-    background-color: rgb(82, 222, 222);
+    background-color: rgb(47, 207, 247);
     color: #fff;
+    cursor: pointer;
 }
 
 .md {
