--- a/src/app/mdeditor/page.module.css
+++ b/src/app/mdeditor/page.module.css
@@ -68,6 +68,7 @@
     margin: 30px auto 20px;
     padding-right: 15px;
     padding-left: 15px;
+    font-size: 21px;
     background: linear-gradient(rgba(255, 255, 255, 0) 92%, rgb(255, 95, 46) 8%);
 }
 
